# RuneBook

./: .env.development.exemple  .env.production.exemple  .eslintrc  .gitignore  README.md  pyproject.toml  requirements.txt  test.py  vercel.json
.github/workflows/: cleanup.yml
backend/: api.py  app.py  cleanup.py
backend/tests/: test_unnitaires.py
backend/tests/ai/: questions_1.json  rapport_1.html  rapport_2.html  rapport_3.html  responses_1.json  responses_2.json  responses_3.json  responses_4.json  responses_5.json  test_script.py
backend/tests/charge/: test_charge.py
data/: addGuides.py  create_collection.py  create_collection_champ.py  create_collection_guides.py  fill_collection_champions.py  fill_collection_guides.py  models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/imageFormatting/: imageCompressing.js
frontend/public/: firebase-messaging-sw.js  site.webmanifest
frontend/public/.well-known/: assetlinks.json
frontend/src/: App.jsx  main.jsx  storage.js
frontend/src/api/: chat.tsx  client.js  conversation.tsx  guide.tsx  message.tsx  test.tsx  user.tsx
frontend/src/component/: footer.jsx  navbar.jsx
frontend/src/context/: appContext.jsx
frontend/src/pages/: catalog.jsx  catalogue.jsx  chatbot.jsx  connexion.jsx  home.jsx  homePage.jsx  inscription.jsx  login.jsx  logout.jsx  privacy.jsx  redirect.jsx  supprAcc.jsx  terms.jsx  worldmap.jsx
frontend/src/styles/: index.css
